@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 - [UPGRADE-OS] Only create a Boot Environment when an upgrade is available
 - [UPGRADE-OS] Incorrect date format
+- [UPGRADE-OS] Correctly Download and use the upgrade when upgrading only one or more jails and base is up-to-date
 
 
 ## [1.0.0] - 2024-09-11
